<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Features.BandCRUD.UpdateBandInfo.BandUpdateDialogFragment">

    <EditText
        android:id="@+id/bandNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/band_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registrationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/band_num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bandNameEditText" />

    <EditText
        android:id="@+id/genreEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationEditText" />


    <Button
        android:id="@+id/updateBandInfoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/genreEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintLeft_toRightOf="@+id/updateBandInfoButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
