<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/albumNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="55dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        tools:text="Название альбома" />

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:contentDescription="@string/edit_button_description"
        app:layout_constraintRight_toLeftOf="@+id/crossImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/cross_image_content_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

    <TextView
        android:id="@+id/albumPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_price"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumNameTextView" />

    <TextView
        android:id="@+id/albumPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toRightOf="@id/albumPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/albumNameTextView"
        tools:text="4 990 тг" />

    <TextView
        android:id="@+id/albumRelDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_relDate"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumPriceTitle" />

    <TextView
        android:id="@+id/albumRelDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toRightOf="@id/albumRelDateTitle"
        app:layout_constraintTop_toBottomOf="@id/albumPriceTitle"
        tools:text="12 мая 17" />

</androidx.constraintlayout.widget.ConstraintLayout>